--- a/src/CarteiraPet.WebApp/Views/Pet/CreateForm.cshtml
+++ b/src/CarteiraPet.WebApp/Views/Pet/CreateForm.cshtml
@@ -6,14 +6,14 @@
 
 <form method="post" asp-controller="Pet" asp-action="CreatePet" enctype="multipart/form-data">
     <label>Nome</label>
-    <input type="text" class="form-control mb-2" id="Name" name="Name" value="@Html.DisplayFor(m => m.Name)"/>
+    <input type="text" class="form-control mb-2" id="Name" name="Name" asp-for="Name"/>
 
     <label>Data de nascimento</label>
-    <input type="date" class="form-control mb-2" id="BirthDate" name="BirthDate" value="@Html.DisplayFor(m => m.BirthDate)"/>
+    <input type="date" class="form-control mb-2" id="BirthDate" name="BirthDate" asp-for="BirthDate"/>
 
     <div class="form-group">
         <label for="selectSexo">Sexo</label>
-        <select class="form-control" id="selectSexo" value="@Html.DisplayFor(m => m.Sex)">
+        <select class="form-control" id="selectSexo" asp-for="Sex">
             <option value="0" selected="">Escolha</option>
             <option value="1">Femea</option>
             <option value="2">Macho</option>
@@ -25,7 +25,7 @@
         <div>
             <label for="files" type="button" class="btn btn-primary" class="btn">Escolher foto</label>
             <label id="choosePhoto"> nenhuma foto escolhida</label>
-            <input id="files" style="visibility:hidden;" type="file" accept="image/*" value="@Html.DisplayFor(m => m.Photo)"/>
+            <input id="files" style="visibility:hidden;" type="file" accept="image/*" asp-for="Photo"/>
         </div>
     </div>
 
