--- a/src/CarteiraPet.WebApp/Views/Pet/Index.cshtml
+++ b/src/CarteiraPet.WebApp/Views/Pet/Index.cshtml
@@ -8,12 +8,12 @@
    @foreach (var pet in Model)
    {
        <div class="card" style="width: 16rem; margin: 5px">
-           <img src="@Html.DisplayFor(m => pet.Photo)" class="card-img-top" alt="...">
+           <img style="width: 250px; height: 250px" src="@Html.DisplayFor(m => pet.Photo)" class="card-img-top" alt="...">
            <div class="card-body">
                <h5 class="card-title">@Html.DisplayFor(m => pet.Name)</h5>
                <p class="card-text">@Html.DisplayFor(m => pet.Age)</p>
    
-               <a href="#" class="btn btn-primary">Ver Carteira</a>
+               <a href="#" class="btn btn-primary">Ver carteira</a>
            </div>
        </div> 
    } 
