Get pet, visualização basica

--- a/src/CarteiraPet.WebApp/Views/Pet/Index.cshtml
+++ b/src/CarteiraPet.WebApp/Views/Pet/Index.cshtml
@@ -13,7 +13,7 @@
                <h5 class="card-title">@Html.DisplayFor(m => pet.Name)</h5>
                <p class="card-text">@Html.DisplayFor(m => pet.Age)</p>
    
-               <a href="#" class="btn btn-primary">Ver carteira</a>
+               <a href="pet/get/@pet.Id" class="btn btn-primary">Ver carteira</a>
            </div>
        </div> 
    } 
