--- a/src/CarteiraPet.WebApp/Views/Pet/Get.cshtml
+++ b/src/CarteiraPet.WebApp/Views/Pet/Get.cshtml
@@ -1,17 +1,70 @@
 @model CarteiraPet.Domain.Models.PetModel
 
+<h1>@Model.Name</h1>
 <div class="d-flex flex-wrap justify-content-center">
-    <div class="card" style="width: 33rem; margin: 5px; align-items: center;">
-        <img style="width: 250px; height: 250px" src="@Model.Photo" class="card-img-top" alt="...">
-        <div class="card-body" style="width: 100%; padding: 10px 140px" >
+    <button class="btn btn-edit-vaccines btn-primary">Adicionar Vacina</button>
+</div>
+
+<div class="d-flex flex-wrap justify-content-center">
+    <div class="card" style="width: 21rem; margin: 5px;">
+        <div class="card-body" style="width: 100%">
             <div>
-                <h5 class="card-title p-2">@Model.Name</h5>
-                 <p class="card-text p-2">@Model.Age</p>
+                <div class="form-group">
+                    <label class="f-bold">Vacina:</label>
+                    <p class="card-text">Vacina da gripe</p>
+                </div>
+                <div class="form-group">
+                    <label class="f-bold">Data:</label>
+                    <p class="card-text">06/08/2022</p>
+                </div>
+                <div class="form-group">
+                    <label class="f-bold">Veterinario:</label>
+                    <p class="card-text">Dr. Pet</p>
+                </div>
+                <div class="form-group">
+                    <label class="f-bold">Endereço:</label>
+                    <p class="card-text">Rua dos bichos 123, Mauá -SP</p>
+                </div>
             </div>
-            <div class="d-flex">
-                
-                <p class="card-text p-2">@Model.Sex</p>
-                 <button class="ml-auto p-2 btn btn-primary">Editar</button>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex flex-wrap justify-content-center">
+    <button class="btn btn-primary btn-edit-vaccines">Adicionar Peso</button>
+</div>
+<div class="d-flex flex-wrap justify-content-center">
+    <div class="card" style="width: 21rem; margin: 5px;">
+        <div class="card-body" style="width: 100%">
+            <div>
+                <div class="form-group card-peso">
+                    <label class="f-bold">peso(kg):</label>
+                    <p class="card-text">3.1</p>
+                </div>
+                <div class="form-group card-peso">
+                    <label class="f-bold">Data:</label>
+                    <p class="card-text">06/08/2022</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex flex-wrap justify-content-center">
+    <button class="btn btn-primary btn-edit-vaccines">Adicionar anotação</button>
+</div>
+
+<div class="d-flex flex-wrap justify-content-center">
+    <div class="card" style="width: 21rem; margin: 5px;">
+        <div class="card-body" style="width: 100%">
+            <div>
+                <div class="form-group">
+                    <label class="f-bold">Nota:</label>
+                    <p class="card-text">
+                        Dr maria, falou que é normal ocorrer queda de pelo por conta da epocá do ano.
+                    </p>
+                    <p class="card-text">06/08/2022</p>
+                </div>
             </div>
         </div>
     </div>
